# deepmate

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: publish.yml
config/: deepmate.yaml  providers.yaml
pet_ui/: package-lock.json  package.json
pet_ui/electron/: main.js  preload.js
pet_ui/renderer/: bubble.js  hud.js  pet.html  pet.js
pet_ui/renderer/styles/: bubble.css  (+2 more)
profiles/default/: identity.md  soul.md  user.md
src/deepmate/: __init__.py  __main__.py
tests/: test_activity.py  test_behavior_computer.py  test_browser_tools.py  test_builtin_tools.py  test_capability_maintenance.py  test_capability_state.py  test_chat_completions_provider.py  test_checkpoint_store.py  test_checkpoint_update.py  test_context_builder.py  test_conversation_budget.py  test_cron_jobs.py  test_delivery_review.py  test_evolution_behavior.py  test_evolution_failure_patterns.py  test_evolution_generated_skills.py  test_evolution_maintenance.py  test_hooks_interactive.py  test_hooks_kernel.py  test_local_runtime.py  test_mcp_executor.py  test_mcp_http_client.py  test_mcp_progressive_disclosure.py  test_memory_curator.py  test_memory_extractor.py  test_memory_maintenance.py  test_memory_manager.py  test_model_purpose.py  test_pet_companion.py  test_prefix_cache.py  test_preview_deploy.py  test_process_env.py  test_provider_messages.py  test_qa_audit.py  test_remote_wecom.py  test_runtime_validation.py  test_session_lineage.py  test_session_maintenance.py  test_session_runtime.py  test_session_summary.py  (+17 more)
(+214 files in other folders)
